<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">AI Food</string>
    <string name="title_activity_main">AI Food</string>
    <string name="package_name">com.aifood.app</string>
    <string name="custom_url_scheme">com.aifood.app</string>
    <string name="widget_add_food_description">Быстрое добавление еды</string>
    <string name="widget_action_scan">Камера / Штрихкод</string>
    <string name="widget_action_scan_describe">Камера + Описание</string>
    <string name="widget_action_gallery">Галерея</string>
    <string name="widget_action_describe">Описать</string>
    <string name="widget_action_manual">Вручную</string>
    <string name="widget_action_favorites">Избранное</string>
    <string name="widget_action_scan_short">Камера</string>
    <string name="widget_action_scan_describe_short">Камера+</string>
    <string name="widget_kbju_description">КБЖУ сегодня</string>
    <string name="widget_kbju_activity_description">КБЖУ кольца</string>
    <string name="widget_kbju_label_kcal">Ккал</string>
    <string name="widget_kbju_label_protein">Белки</string>
    <string name="widget_kbju_label_fat">Жиры</string>
    <string name="widget_kbju_label_carbs">Углеводы</string>
    <string name="widget_week_kcal_description">Калории за неделю</string>
    <string name="widget_week_kcal_legend_protein">Б</string>
    <string name="widget_week_kcal_legend_fat">Ж</string>
    <string name="widget_week_kcal_legend_carbs">У</string>
    <string name="widget_streak_diary_title">Дневник</string>
    <string name="widget_streak_calorie_title">Норма калорий</string>
    <string name="widget_streak_calorie_title_short">Норма</string>
    <string name="widget_streak_diary_description">Дневник</string>
    <string name="widget_streak_calorie_description">Норма калорий</string>
    <string name="widget_streak_week_description">Серии за неделю</string>
    <string name="widget_streak_day_mon">пн</string>
    <string name="widget_streak_day_tue">вт</string>
    <string name="widget_streak_day_wed">ср</string>
    <string name="widget_streak_day_thu">чт</string>
    <string name="widget_streak_day_fri">пт</string>
    <string name="widget_streak_day_sat">сб</string>
    <string name="widget_streak_day_sun">вс</string>
</resources>
